# Rasipam

./: README.md
algorithm/: .gitignore  CMakeLists.txt  mdlmodule.cpp  quantitative_data_generator.py  quantitative_test.sh  setup.py  test.cpp
algorithm/base/: BaseAttr.cpp  BaseAttr.h  BaseDS.cpp  BaseDS.h  BaseEvt.cpp  BaseEvt.h  BaseSeq.cpp  BaseSeq.h  FileLoader.cpp  FileLoader.h
algorithm/mdl_module/: Attribute.h  CodeTable.cpp  CodeTable.h  Common.h  Cover.cpp  Cover.h  Defines.h  Event.cpp  Event.h  GetOpt.cpp  GetOpt.h  MathUtil.cpp  MathUtil.h  Node.cpp  Node.h  Params.h  Pattern.cpp  Pattern.h  PatternTable.cpp  PatternTable.h  Sequence.cpp  Sequence.h  Window.cpp  Window.h  mdl_enter.cpp  mdl_enter.h
backend/: .gitignore  api.py
backend/datasets/Badminton (Female)/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/datasets/Badminton (Male)/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/datasets/Tennis (Female)/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/datasets/Tennis (Male)/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/src/: data_manager.py  mine_alg_interface.py  tactic_dimensionality_reducer.py
backend/src/model/: __init__.py  dataset.py  hit.py  modification.py  rally.py  tactic.py  value.py
backend/src/utils/: __init__.py  common.py  token.py  utils.py  video.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.js
(+64 files in other folders)
